--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 				<h2>Fast Group Engineering là công ty chuyên cung cấp thiết bị vật tư và nhân lực cho các nhà máy trong
 					và ngoài nước</h2>
 				<p style="margin-bottom: 55px;">
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-					et dolore magna aliqua.
+					Đối tác tin cậy trong cung ứng thiết bị, logistics quốc tế, thủ tục hải quan và giải pháp kỹ thuật
+					cho doanh nghiệp sản xuất.
 				</p>
 			</div>
 		</div>
 
-		<div class="container">
+		<!-- <div class="container">
 			<div class="row">
 				<div class="col-md-12">
 					<div class="model-search-content">
@@ -84,7 +84,7 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
 
 	</section><!--/.welcome-hero-->
 	<!--welcome-hero end -->
@@ -234,9 +234,9 @@
 
 			</div>
 
-			<div class="text-center mt-5">
+			<!-- <div class="text-center mt-5">
 				<button class="detail-all-btn">Xem tất cả sản phẩm</button>
-			</div>
+			</div> -->
 		</div>
 	</section>
 	<!--/.service-->
@@ -255,15 +255,15 @@
 					<div class="single-testimonial-box card h-100">
 						<div class="card-body d-flex flex-column">
 							<div class="testimonial-img mb-3">
-								<img src="assets/images/clients/c1.png" alt="client 1" class="rounded-circle">
-							</div>
-							<div class="testimonial-comment mb-3">
-								<p class="mb-0">Sed ut pers unde omnis iste natus error sit voluptatem accusantium dolor
-									laudan rem aperiam, eaque ipsa quae ab illo inventore verit.</p>
+								<i class="bi bi-file-earmark-text fs-1 text-primary"></i>
 							</div>
 							<div class="mt-auto testimonial-person">
-								<h5 class="mb-0"><a href="#">Tomas Lili</a></h5>
-								<small class="text-muted">New York</small>
+								<h5 class="mb-0"><a href="#">Chứng Từ & Hải Quan</a></h5>
+								<small class="text-muted">Nhanh chóng – Chính xác – Hợp lệ</small>
+							</div>
+							<div class="testimonial-comment mb-3">
+								<p class="mb-0">Cung cấp đầy đủ hóa đơn VAT, CO, CQ và chứng từ nhập khẩu.
+									Hỗ trợ hồ sơ hải quan, thông quan nhanh, đúng quy định.</p>
 							</div>
 						</div>
 					</div>
@@ -274,15 +274,15 @@
 					<div class="single-testimonial-box card h-100">
 						<div class="card-body d-flex flex-column">
 							<div class="testimonial-img mb-3">
-								<img src="assets/images/clients/c2.png" alt="client 2" class="rounded-circle">
-							</div>
-							<div class="testimonial-comment mb-3">
-								<p class="mb-0">Sed ut pers unde omnis iste natus error sit voluptatem accusantium dolor
-									laudan rem aperiam, eaque ipsa quae ab illo inventore verit.</p>
+								<i class="bi bi-tools fs-1 text-primary"></i>
 							</div>
 							<div class="mt-auto testimonial-person">
-								<h5 class="mb-0"><a href="#">Romi Rain</a></h5>
-								<small class="text-muted">London</small>
+								<h5 class="mb-0"><a href="#">Hỗ Trợ Kỹ Thuật</a></h5>
+								<small class="text-muted">Kinh nghiệm – Chuyên môn – Tin cậy</small>
+							</div>
+							<div class="testimonial-comment mb-3">
+								<p class="mb-0">Tư vấn lựa chọn thiết bị phù hợp.
+									Hỗ trợ kỹ thuật, lắp đặt và vận hành cho nhà máy và dự án công nghiệp.</p>
 							</div>
 						</div>
 					</div>
@@ -293,15 +293,15 @@
 					<div class="single-testimonial-box card h-100">
 						<div class="card-body d-flex flex-column">
 							<div class="testimonial-img mb-3">
-								<img src="assets/images/clients/c3.png" alt="client 3" class="rounded-circle">
-							</div>
-							<div class="testimonial-comment mb-3">
-								<p class="mb-0">Sed ut pers unde omnis iste natus error sit voluptatem accusantium dolor
-									laudan rem aperiam, eaque ipsa quae ab illo inventore verit.</p>
+								<i class="bi bi-truck fs-1 text-primary"></i>
 							</div>
 							<div class="mt-auto testimonial-person">
-								<h5 class="mb-0"><a href="#">John Doe</a></h5>
-								<small class="text-muted">Washington</small>
+								<h5 class="mb-0"><a href="#">Vận Chuyển & Tờ Khai</a></h5>
+								<small class="text-muted">Nhanh – An toàn – Hiệu quả</small>
+							</div>
+							<div class="testimonial-comment mb-3">
+								<p class="mb-0">Vận chuyển linh hoạt, giao hàng đúng tiến độ.
+									Hỗ trợ khai báo hải quan và làm tờ khai nhanh chóng, tối ưu chi phí.</p>
 							</div>
 						</div>
 					</div>
@@ -368,60 +368,69 @@
 		<div class="container">
 			<div class="footer-top">
 				<div class="row">
-					<div class="col-md-6 col-sm-6">
+
+					<!-- CỘT 1: CÔNG TY -->
+					<div class="col-md-5 col-sm-6">
 						<div class="single-footer-widget">
 							<div class="footer-logo">
-								<a href="index.html">FAST GROUP ENGINEERING</a>
+								<a href="index.html" style="font-size: medium;">CÔNG TY TRÁCH NHIỆM HỮU HẠN FAST
+									GROUP</a>
 							</div>
+
 							<p>
-								Ased do eiusm tempor incidi ut labore et dolore magnaian aliqua. Ut enim ad minim
-								veniam.
+								© 2019 - 2026 Công ty TNHH Fast Group<br>
+								Giấy phép kinh doanh số 0315555189 do Sở KHĐT TP HCM cấp lần đầu ngày 08 tháng 03 năm
+								2019
 							</p>
+
 							<div class="footer-contact">
-								<p>admin@fastgroup.vn</p>
-								<p>093.8888.958</p>
+								<p>minhduc@fastgroup.vn</p>
+								<p>093 8888 958</p>
 							</div>
 						</div>
 					</div>
-					<div class="col-md-2 col-sm-6">
+
+					<!-- CỘT 2: ĐỊA CHỈ -->
+					<div class="col-md-5 col-sm-6">
 						<div class="single-footer-widget">
-							<h2>about devloon</h2>
-							<ul>
-								<li><a href="#">about us</a></li>
-								<li><a href="#">career</a></li>
-								<li><a href="#">terms <span> of service</span></a></li>
-								<li><a href="#">privacy policy</a></li>
-							</ul>
+							<p>
+								<b>Trụ sở chính:</b><br>
+								150/41 Nguyễn Cư Trinh, Phường Cầu Ông Lãnh, Thành phố Hồ Chí Minh
+							</p>
+							<p>
+								<b>Văn phòng Hà Nội:</b><br>
+								41 Trần Văn Giàu, Phường Đống Đa, Hà Nội
+							</p>
+							<p>
+								<b>Văn phòng HCM:</b><br>
+								51 Lê Văn Lộc, Phường Vũng Tàu, Thành phố Hồ Chí Minh
+							</p>
 						</div>
 					</div>
-					<div class="col-md-offset-1 col-md-3 col-sm-6">
-						<div class="single-footer-widget">
-							<h2>news letter</h2>
-							<div class="footer-newsletter">
-								<p>
-									Subscribe to get latest news update and informations
-								</p>
-							</div>
-							<div class="hm-foot-email">
-								<div class="foot-email-box">
-									<input type="text" class="form-control" placeholder="Add Email">
-								</div><!--/.foot-email-box-->
-								<div class="foot-email-subscribe">
-									<span><i class="fa fa-arrow-right"></i></span>
-								</div><!--/.foot-email-icon-->
-							</div><!--/.hm-foot-email-->
+
+					<!-- CỘT 3: ẢNH BỘ CÔNG THƯƠNG -->
+					<div class="col-md-2 col-sm-12">
+						<div class="single-footer-widget text-center">
+							<a href="LINK_CUA_BAN" target="_blank">
+								<img src="/assets/images/da-dang-ky.png" alt="Đã thông báo Bộ Công Thương"
+									style="max-width:180px; margin-top:10px;">
+							</a>
 						</div>
 					</div>
+
 				</div>
 			</div>
+
+			<!-- GIỮ NGUYÊN COPYRIGHT CŨ -->
 			<div id="footer" class="footer-copyright">
 				<div class="row">
 					<div class="col-sm-6">
 						<p>
-							&copy; copyright.designed and developed by <a
-								href="https://www.themesine.com/">themesine</a>.
-						</p><!--/p-->
+							&copy; copyright.designed and developed by
+							<a href="https://www.ocmoxa.com/" target="_blank">Ocmoxa</a>.
+						</p>
 					</div>
+
 					<div class="col-sm-6">
 						<div class="footer-social">
 							<a href="#"><i class="fa fa-facebook"></i></a>
@@ -432,18 +441,18 @@
 						</div>
 					</div>
 				</div>
-			</div><!--/.footer-copyright-->
-		</div><!--/.container-->
-
-		<div id="scroll-Top">
-			<div class="return-to-top">
-				<i class="fa fa-angle-up " id="scroll-top" data-toggle="tooltip" data-placement="top" title=""
-					data-original-title="Back to Top" aria-hidden="true"></i>
 			</div>
 
-		</div><!--/.scroll-Top-->
+		</div>
 
-	</footer><!--/.contact-->
+		<!-- GIỮ NÚT SCROLL TOP -->
+		<div id="scroll-Top">
+			<div class="return-to-top">
+				<i class="fa fa-angle-up" id="scroll-top"></i>
+			</div>
+		</div>
+	</footer>
+
 	<!--contact end-->
 
 	<script src="assets/js/jquery.js"></script>
