--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 
             <!-- Logo -->
             <a class="navbar-brand fw-bold" href="/">
-                <img src="/assets/logo/logo.png" alt="Logo" style="height: 60px;">
+                <img src="assets/logo/logo.png" alt="Logo" style="height: 60px;">
             </a>
 
             <!-- Toggle -->
