--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 								kiểm định đầy đủ, phục vụ thay
 								thế, tiêu hao trong sản xuất.</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -139,8 +139,8 @@
 								đến thiết bị đo chính xác cho nhà
 								máy.</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -161,8 +161,8 @@
 							<p class="card-text text-muted">Giải pháp bảo hộ và phòng cháy cho an toàn vận hành.
 							</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -182,8 +182,8 @@
 							<p class="card-text text-muted small">Sản phẩm dầu nhớt chính hãng cho máy móc công nghiệp.
 							</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -203,8 +203,8 @@
 							<p class="card-text text-muted small">Valve nhập khẩu và sản xuất theo tiêu chuẩn công
 								nghiệp.</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -223,8 +223,8 @@
 							<h5 class="card-title">XÂY DỰNG & SỬA CHỮA NHÀ MÁY</h5>
 							<p class="card-text text-muted small">Thi công, bảo trì và nâng cấp hạ tầng nhà máy.</p>
 							<div class="d-flex justify-content-between align-items-center mt-3">
-								<button class="detail-btn">Liên hệ</button>
-								<a href="/products/index.html" class="arrow-link">
+								<button class="detail-btn" onclick="location.href='#contact'">Liên hệ</button>
+								<a href="#" class="arrow-link">
 									<i class="bi bi-arrow-right"></i>
 								</a>
 							</div>
@@ -351,6 +351,21 @@
 							<img src="assets/images/brand/br6.png" alt="brand-image" />
 						</a>
 					</div><!--/.item-->
+					<div class="item">
+						<a href="#">
+							<img src="assets/images/brand/br7.webp" alt="brand-image" />
+						</a>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img src="assets/images/brand/br8.png" alt="brand-image" />
+						</a>
+					</div>
+					<div class="item">
+						<a href="#">
+							<img src="assets/images/brand/br9.svg" alt="brand-image" />
+						</a>
+					</div>
 				</div><!--/.owl-carousel-->
 			</div><!--/.clients-area-->
 
@@ -398,12 +413,12 @@
 								150/41 Nguyễn Cư Trinh, Phường Cầu Ông Lãnh, Thành phố Hồ Chí Minh
 							</p>
 							<p>
-								<b>Văn phòng Hà Nội:</b><br>
-								41 Trần Văn Giàu, Phường Đống Đa, Hà Nội
-							</p>
-							<p>
 								<b>Văn phòng HCM:</b><br>
 								51 Lê Văn Lộc, Phường Vũng Tàu, Thành phố Hồ Chí Minh
+							</p>
+							<p>
+								<b>Văn phòng Singapore:</b><br>
+								Blk 502 Tampines Central 1, #08-295, Singapore 520502
 							</p>
 						</div>
 					</div>
