--- a/index.html
+++ b/index.html
@@ -321,49 +321,49 @@
 				<div class="owl-carousel owl-theme brand-item">
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br1.png" alt="brand-image" />
+							<img src="assets/images/brand/br1.png" alt="siemens-logo" />
 						</a>
 					</div><!--/.item-->
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br2.png" alt="brand-image" />
+							<img src="assets/images/brand/br2.png" alt="plastigauge-logo" />
 						</a>
 					</div><!--/.item-->
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br3.png" alt="brand-image" />
+							<img src="assets/images/brand/br3.png" alt="qlight-logo" />
 						</a>
 					</div><!--/.item-->
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br4.png" alt="brand-image" />
-						</a>
-					</div><!--/.item-->
-
-					<div class="item">
-						<a href="#">
-							<img src="assets/images/brand/br5.png" alt="brand-image" />
+							<img src="assets/images/brand/br4.png" alt="balon-valves-logo" />
 						</a>
 					</div><!--/.item-->
 
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br6.png" alt="brand-image" />
+							<img src="assets/images/brand/br5.png" alt="scheiner-electric-logo" />
+						</a>
+					</div><!--/.item-->
+
+					<div class="item">
+						<a href="#">
+							<img src="assets/images/brand/br6.png" alt="flygt-logo" />
 						</a>
 					</div><!--/.item-->
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br7.webp" alt="brand-image" />
+							<img src="assets/images/brand/br7.webp" alt="emerson-rosemount-logo" />
 						</a>
 					</div>
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br8.png" alt="brand-image" />
+							<img src="assets/images/brand/br8.png" alt="abb-logo" />
 						</a>
 					</div>
 					<div class="item">
 						<a href="#">
-							<img src="assets/images/brand/br9.svg" alt="brand-image" />
+							<img src="assets/images/brand/br9.svg" alt="xylem-logo" />
 						</a>
 					</div>
 				</div><!--/.owl-carousel-->
