--- a/menu.html
+++ b/menu.html
@@ -22,19 +22,19 @@
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="/products/index.html">Sản Phẩm</a>
+                        <a class="nav-link fw-semibold" href="#service">Sản Phẩm</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="/services/index.html">Dịch Vụ</a>
+                        <a class="nav-link fw-semibold" href="#clients-say">Dịch Vụ</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="/services/index.html">Thương hiệu</a>
+                        <a class="nav-link fw-semibold" href="#brand">Thương hiệu</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link fw-semibold" href="/contact.html">Liên Hệ</a>
+                        <a class="nav-link fw-semibold" href="#contact">Liên Hệ</a>
                     </li>
 
 
