--- a/index.html
+++ b/index.html
@@ -43,17 +43,21 @@
 	</div>
 	<!-- Spinner End -->
 
-
 	<!-- Navbar Start -->
 	<nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
 		<a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
 			<img src="img/logo.png" alt="Logo" class="main-logo">
 		</a>
+		<button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
 			<div class="navbar-nav ms-auto p-4 p-lg-0">
-				<a href="index.html" class="nav-item nav-link active">Home</a>
-				<!-- <a href="contact.html" class="nav-item nav-link">Contact</a> -->
-				<!-- Phone Button -->
+				<a href="index.html" class="nav-item nav-link active">Trang chủ</a>
+				<a href="brands.html" class="nav-item nav-link">Thương hiệu</a>
+				<a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+
+				<!-- Telephone Button -->
 				<a href="tel:0900000000" class="contact-btn phone-btn d-none d-lg-inline-flex">
 					<i class="bi bi-telephone-fill"></i>
 					(+84) 938 888 958
@@ -86,8 +90,8 @@
 								</h6>
 								<p class="fs-5 text-white mb-4 pb-2">Đối tác tin cậy trong cung ứng thiết bị, logistics
 									quốc tế, thủ tục hải quan và giải pháp kỹ thuật cho doanh nghiệp sản xuất.</p>
-								<a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read
-									More</a>
+								<a href="contact.html"
+									class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Liên hệ</a>
 								<!-- <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>  -->
 							</div>
 						</div>
@@ -108,8 +112,8 @@
 									đóng vai trò quan trọng trong chuỗi cung ứng nguyên liệu polymer, góp phần nâng cao
 									năng lực sản xuất trong nước và thúc đẩy phát triển kinh tế công nghiệp bền vững.
 								</p>
-								<a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact
-									us</a>
+								<a href="contact.html"
+									class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Liên hệ</a>
 							</div>
 						</div>
 					</div>
@@ -130,8 +134,8 @@
 									độ tin cậy tuyệt đối. Fast Group Engineering tự hào đồng hành trong cung ứng thiết
 									bị và hỗ trợ kỹ thuật cho các hạng mục liên quan.
 								</p>
-								<a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Contact
-									us</a>
+								<a href="contact.html"
+									class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Liên hệ</a>
 							</div>
 						</div>
 					</div>
@@ -204,13 +208,13 @@
 	<div class="container-xxl py-5">
 		<div class="container">
 			<div class="row g-5">
-				<div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
+				<div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
 					<div class="position-relative h-100">
 						<img class="img-fluid position-absolute w-100 h-100" src="img/about.jpg" alt=""
 							style="object-fit: cover;">
 					</div>
 				</div>
-				<div class="col-lg-8 d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
+				<div class="col-lg-6 d-flex flex-column justify-content-center wow fadeInUp" data-wow-delay="0.3s">
 
 					<h6 class="section-title bg-white text-start text-primary pe-3">Về Chúng Tôi</h6>
 
@@ -235,10 +239,6 @@
 						góp phần thúc đẩy sự phát triển của ngành công nghiệp
 						và kinh tế thị trường Việt Nam.
 					</p>
-
-					<a href="contact.html" class="btn btn-primary px-4 py-2">
-						Hợp tác cùng chúng tôi
-					</a>
 
 				</div>
 			</div>
@@ -323,7 +323,7 @@
 		<div class="container">
 			<div class="text-center">
 				<h6 class="section-title bg-white text-center text-primary px-3">Thương hiệu</h6>
-				<h1 class="mb-5">Chúng tôi hợp tác với</h1>
+				<h1 class="mb-5">Chúng tôi hợp tác cùng các thương hiệu quốc tế</h1>
 			</div>
 			<div class="owl-carousel testimonial-carousel position-relative">
 				<div class="item">
@@ -372,8 +372,12 @@
 						2019
 					</p>
 					<div class="d-flex pt-2">
-						<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
-						<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>
+						<a class="btn btn-outline-light btn-social"
+							href="https://www.facebook.com/profile.php?id=61583052565058"><i
+								class="fab fa-facebook-f"></i></a>
+						<a class="btn btn-outline-light btn-social"
+							href="https://www.linkedin.com/in/duc-dang-minh-928b7a10b"><i
+								class="fab fa-linkedin-in"></i></a>
 					</div>
 				</div>
 				<div class="col-lg-6 col-md-6">
@@ -389,7 +393,7 @@
 				</div>
 				<div class="col-lg-2 col-md-6">
 					<div class="position-relative mx-auto" style="max-width: 400px;">
-						<a href="LINK_CUA_BAN" target="_blank">
+						<a href="#" target="_blank">
 							<img src="img/da-dang-ky.png" alt="Đã thông báo Bộ Công Thương">
 						</a>
 					</div>
@@ -403,16 +407,7 @@
 						&copy; <a class="border-bottom" href="#">FAST GROUP ENGINEERING</a>, All Right Reserved.
 
 						<!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-						Designed By <a class="border-bottom" href="https://htmlcodex.com">HTML Codex</a><br><br>
-						Distributed By <a class="border-bottom" href="https://themewagon.com">ThemeWagon</a>
-					</div>
-					<div class="col-md-6 text-center text-md-end">
-						<div class="footer-menu">
-							<a href="">Home</a>
-							<a href="">Cookies</a>
-							<a href="">Help</a>
-							<a href="">FQAs</a>
-						</div>
+						Designed By <a class="border-bottom" href="https://ocmoxa.com">OCMOXA</a><br><br>
 					</div>
 				</div>
 			</div>
