--- a/abb.html
+++ b/abb.html
@@ -76,15 +76,16 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid bg-primary py-5 mb-5 page-header">
+    <div class="container-fluid bg-primary py-5 mb-5 page-header-inner">
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Liên hệ</h1>
+                    <h1 class="display-3 text-white animated slideInDown">ABB</h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="/index.html">Trang chủ</a></li>
-                            <li class="breadcrumb-item text-white active" aria-current="page">Liên hệ</li>
+                            <li class="breadcrumb-item"><a class="text-white" href="/brands.html">Thương hiệu</a></li>
+                            <li class="breadcrumb-item text-white active" aria-current="page">ABB</li>
                         </ol>
                     </nav>
                 </div>
@@ -94,136 +95,141 @@
     <!-- Header End -->
 
 
-    <!-- Contact Start -->
+    <!-- Courses Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Liên hệ chúng tôi</h6>
-            </div>
-            <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
 
-                    <!-- Trụ sở chính -->
-                    <div class="d-flex align-items-start mb-4">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa fa-building text-white"></i>
-                        </div>
-                        <div class="ms-3">
-                            <h5 class="text-primary mb-1">Trụ sở chính</h5>
-                            <p class="mb-0">
-                                150/41 Nguyễn Cư Trinh,<br>
-                                Phường Cầu Ông Lãnh,<br>
-                                TP. Hồ Chí Minh
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Văn phòng HCM -->
-                    <div class="d-flex align-items-start mb-4">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa fa-map-marker-alt text-white"></i>
-                        </div>
-                        <div class="ms-3">
-                            <h5 class="text-primary mb-1">Văn phòng HCM</h5>
-                            <p class="mb-0">
-                                51 Lê Văn Lộc, Phường Vũng Tàu, <br>
-                                TP. Hồ Chí Minh
-                            </p>
-                        </div>
-                    </div>
-
-                    <!-- Văn phòng Singapore -->
-                    <div class="d-flex align-items-start mb-4">
-                        <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary"
-                            style="width: 50px; height: 50px;">
-                            <i class="fa fa-globe text-white"></i>
-                        </div>
-                        <div class="ms-3">
-                            <h5 class="text-primary mb-1">Văn phòng Singapore</h5>
-                            <p class="mb-0">
-                                Blk 502 Tampines Central 1,<br>
-                                #08-295, Singapore 520502
-                            </p>
-                        </div>
-                    </div>
-                    <!-- Phone + Email chung 1 hàng -->
-                    <!-- Phone + Email gọn -->
-                    <div class="row g-3 mt-2">
-
-                        <!-- Phone -->
-                        <div class="col-6">
-                            <div class="d-flex align-items-center">
-                                <i class="fa fa-phone-alt text-primary me-2"></i>
-                                <a href="tel:+84900000000" class="text-dark text-decoration-none">
-                                    +84 398 888 958
-                                </a>
-                            </div>
-                        </div>
-                        <!-- Email -->
-                        <div class="col-6">
-                            <div class="d-flex align-items-center">
-                                <i class="fa fa-envelope text-primary me-2"></i>
-                                <a href="mailto:info@fastgroup.vn" class="text-dark text-decoration-none">
-                                    minhduc@fastgroup.vn
-                                </a>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <iframe class="position-relative rounded w-100 h-100"
-                        src="https://maps.google.com/maps?width=600&height=400&hl=en&q=51%20L%C3%AA%20V%C4%83n%20L%E1%BB%99c%2C%20Ph%C6%B0%E1%BB%9Dng%209%2C%20TP.%20V%C5%A9ng%20T%C3%A0u&t=&z=14&ie=UTF8&iwloc=B&output=embed"
-                        frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
-                        tabindex="0"></iframe>
-                </div>
-                <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s">
-                    <form>
-                        <div class="row g-3">
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name">Your Name</label>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-floating">
-                                    <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="form-floating">
-                                    <textarea class="form-control" placeholder="Leave a message here" id="message"
-                                        style="height: 150px"></textarea>
-                                    <label for="message">Message</label>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
+            <!-- Giới thiệu ngắn -->
+            <div class="row mb-5">
+                <div class="col-lg-12 text-center">
+                    <h5 class="text-primary mb-3">Electrification & Industrial Automation</h5>
+                    <p class="fs-5">
+                        ABB là tập đoàn công nghệ toàn cầu chuyên cung cấp thiết bị điện,
+                        giải pháp tự động hóa và điều khiển cho nhà máy công nghiệp,
+                        năng lượng và hạ tầng.
+                    </p>
                 </div>
             </div>
+
+            <!-- Giới thiệu chi tiết -->
+            <div class="row align-items-center mb-5">
+                <div class="col-lg-6">
+                    <img src="img/abb-overview.jpg" class="img-fluid rounded" alt="ABB">
+                </div>
+                <div class="col-lg-6">
+                    <h4 class="mb-3">Giới thiệu về ABB</h4>
+                    <p>
+                        ABB cung cấp danh mục sản phẩm toàn diện trong lĩnh vực
+                        điện trung – hạ thế, truyền động, điều khiển và đo lường công nghiệp.
+                        Giải pháp ABB được ứng dụng rộng rãi trong nhà máy điện,
+                        nhà máy đạm, dầu khí và công nghiệp nặng.
+                    </p>
+                    <p>
+                        Với công nghệ tiên tiến và tiêu chuẩn quốc tế,
+                        ABB giúp tối ưu hiệu suất vận hành, nâng cao độ tin cậy
+                        và đảm bảo an toàn cho hệ thống điện công nghiệp.
+                    </p>
+
+                    <p class="mt-3 mb-0">
+                        Website chính hãng:
+                        <a href="https://global.abb" target="_blank" class="text-primary fw-bold text-decoration-none">
+                            global.abb
+                        </a>
+                    </p>
+                </div>
+            </div>
+
+            <!-- Danh mục chính -->
+            <div class="text-center mb-4">
+                <h4>Danh mục thiết bị chính</h4>
+            </div>
+
+            <div class="row g-4 mb-5">
+
+                <!-- Electrical -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 shadow-sm text-center">
+                        <img src="img/abb-mccb.jpg" class="card-img-top detail-cat-img p-3" alt="ABB Electrical">
+                        <div class="card-body">
+                            <h6 class="text-primary">Thiết bị điện hạ thế</h6>
+                            <p class="small mb-0">
+                                MCCB, ACB, contactor và thiết bị bảo vệ.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Drives -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 shadow-sm text-center">
+                        <img src="img/abb-drives.jpg" class="card-img-top detail-cat-img p-3" alt="ABB Drives">
+                        <div class="card-body">
+                            <h6 class="text-primary">Drives & Motors</h6>
+                            <p class="small mb-0">
+                                Biến tần và động cơ công nghiệp hiệu suất cao.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Instrumentation -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 shadow-sm text-center">
+                        <img src="img/abb-instrument.jpg" class="card-img-top detail-cat-img p-3"
+                            alt="ABB Instrumentation">
+                        <div class="card-body">
+                            <h6 class="text-primary">Instrumentation</h6>
+                            <p class="small mb-0">
+                                Thiết bị đo lưu lượng, áp suất và mức.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Automation -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="card h-100 shadow-sm text-center">
+                        <img src="img/abb-automation.jpg" class="card-img-top detail-cat-img p-3" alt="ABB Automation">
+                        <div class="card-body">
+                            <h6 class="text-primary">Automation Systems</h6>
+                            <p class="small mb-0">
+                                PLC, DCS và giải pháp điều khiển nhà máy.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- Catalogue -->
+            <div class="row mb-5">
+                <div class="col-lg-12 text-center">
+                    <h4 class="mb-3">Tài liệu & Catalogue</h4>
+                    <a href="files/abb-catalogue.pdf" target="_blank" class="btn btn-outline-primary btn-lg">
+                        <i class="fa fa-file-pdf me-2"></i> Tải Catalogue ABB
+                    </a>
+                </div>
+            </div>
+
+            <!-- CTA -->
+            <div class="bg-light p-5 rounded text-center">
+                <h4>Bạn cần tư vấn thiết bị ABB?</h4>
+                <p>Liên hệ Fast Group Engineering để được hỗ trợ kỹ thuật và báo giá nhanh chóng.</p>
+                <a href="contact.html" class="btn btn-primary px-4 py-2">
+                    Liên hệ ngay
+                </a>
+            </div>
+
         </div>
     </div>
-    <!-- Contact End -->
+    <!-- Courses End -->
 
 
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-light footer pt-5 mt-5 wow fadeIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row g-5">
-                <div class="col-lg-4 col-md-6">
+                <div class="col-lg-3 col-md-6">
                     <h4 class="text-white mb-3">CÔNG TY TRÁCH NHIỆM HỮU HẠN FAST
                         GROUP</h4>
                     <p>
