--- a/plastigauge.html
+++ b/plastigauge.html
@@ -146,10 +146,9 @@
                         <img src="img/plastigauge-pla-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-A">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-A (Red)</h6>
+                            <h6 class="text-primary">Plastigauge PL-A</h6>
                             <p class="small mb-0">
-                                0.051 – 0.152 mm<br>
-                                (0.002" – 0.006")
+                                0.025 – 0.175 mm<br>
                             </p>
                         </div>
                     </div>
@@ -161,10 +160,9 @@
                         <img src="img/plastigauge-plb-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-B">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-B (Blue)</h6>
+                            <h6 class="text-primary">Plastigauge PL-B</h6>
                             <p class="small mb-0">
-                                0.102 – 0.229 mm<br>
-                                (0.004" – 0.009")
+                                0.100 – 0.250 mm<br>
                             </p>
                         </div>
                     </div>
@@ -176,10 +174,9 @@
                         <img src="img/plastigauge-plc-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-C">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-C (Green)</h6>
+                            <h6 class="text-primary">Plastigauge PL-C</h6>
                             <p class="small mb-0">
-                                0.025 – 0.076 mm<br>
-                                (0.001" – 0.003")
+                                0.175 – 0.500 mm<br>
                             </p>
                         </div>
                     </div>
@@ -191,9 +188,9 @@
                         <img src="img/plastigauge-pld-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-D">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-D (Brown)</h6>
+                            <h6 class="text-primary">Plastigauge PL-D</h6>
                             <p class="small mb-0">
-                                0.009 – 0.023 mm
+                                0.500 – 1 mm
                             </p>
                         </div>
                     </div>
@@ -205,9 +202,9 @@
                         <img src="img/plastigauge-ple-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-E">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-E (Black)</h6>
+                            <h6 class="text-primary">Plastigauge PL-E</h6>
                             <p class="small mb-0">
-                                0.100 – 0.500 mm
+                                0.750 – 1.750 mm
                             </p>
                         </div>
                     </div>
@@ -219,9 +216,9 @@
                         <img src="img/plastigauge-plf-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-F">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-F (Purple)</h6>
+                            <h6 class="text-primary">Plastigauge PL-F</h6>
                             <p class="small mb-0">
-                                0.003 – 0.018 mm
+                                1.750 – 3 mm
                             </p>
                         </div>
                     </div>
@@ -232,9 +229,9 @@
                         <img src="img/plastigauge-plx-1.jpg" class="card-img-top detail-cat-img p-1"
                             alt="Plastigauge PL-X">
                         <div class="card-body">
-                            <h6 class="text-primary">Plastigauge PL-X (White)</h6>
+                            <h6 class="text-primary">Plastigauge PL-X</h6>
                             <p class="small mb-0">
-                                0.127 – 0.508 mm
+                                0.018 – 0.045 mm
                             </p>
                         </div>
                     </div>
