--- a/qlight.html
+++ b/qlight.html
@@ -149,7 +149,7 @@
                 <!-- Tower Light -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/qlight-tower.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/qlight-tower.png" class="card-img-top detail-cat-img p-3"
                             alt="Qlight Tower Light">
                         <div class="card-body">
                             <h6 class="text-primary">Tower Lights</h6>
@@ -163,7 +163,7 @@
                 <!-- Warning Light -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/qlight-warning.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/qlight-warning.png" class="card-img-top detail-cat-img p-3"
                             alt="Qlight Warning Light">
                         <div class="card-body">
                             <h6 class="text-primary">Warning Lights</h6>
@@ -177,7 +177,7 @@
                 <!-- Audible Alarm -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/qlight-alarm.jpg" class="card-img-top detail-cat-img p-3" alt="Qlight Alarm">
+                        <img src="img/qlight-alarm.png" class="card-img-top detail-cat-img p-3" alt="Qlight Alarm">
                         <div class="card-body">
                             <h6 class="text-primary">Audible Alarms</h6>
                             <p class="small mb-0">
@@ -190,7 +190,7 @@
                 <!-- Explosion Proof -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/qlight-exproof.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/qlight-exproof.png" class="card-img-top detail-cat-img p-3"
                             alt="Qlight Explosion Proof">
                         <div class="card-body">
                             <h6 class="text-primary">Explosion Proof</h6>
