--- a/siemens.html
+++ b/siemens.html
@@ -113,7 +113,7 @@
             <!-- Giới thiệu chi tiết -->
             <div class="row align-items-center mb-5">
                 <div class="col-lg-6">
-                    <img src="img/siemens-electrical-overview.jpg" class="img-fluid rounded" alt="Siemens Electrical">
+                    <img src="img/siemens-electrical-overview.png" class="img-fluid rounded" alt="Siemens Electrical">
                 </div>
                 <div class="col-lg-6">
                     <h4 class="mb-3">Giải pháp thiết bị điện Siemens</h4>
@@ -160,7 +160,7 @@
                 <!-- Contactor -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/siemens-contactor.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/siemens-contactor.webp" class="card-img-top detail-cat-img p-3"
                             alt="Siemens Contactor">
                         <div class="card-body">
                             <h6 class="text-primary">Contactor & Relay</h6>
@@ -174,7 +174,7 @@
                 <!-- Protection Relay -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/siemens-protection.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/siemens-protection.avif" class="card-img-top detail-cat-img p-3"
                             alt="Siemens Protection">
                         <div class="card-body">
                             <h6 class="text-primary">Protection Relay</h6>
@@ -188,7 +188,7 @@
                 <!-- Switchgear -->
                 <div class="col-lg-3 col-md-6">
                     <div class="card h-100 shadow-sm text-center">
-                        <img src="img/siemens-switchgear.jpg" class="card-img-top detail-cat-img p-3"
+                        <img src="img/siemens-switchgear.avif" class="card-img-top detail-cat-img p-3"
                             alt="Siemens Switchgear">
                         <div class="card-body">
                             <h6 class="text-primary">Switchgear Systems</h6>
@@ -205,9 +205,8 @@
             <div class="row mb-5">
                 <div class="col-lg-12 text-center">
                     <h4 class="mb-3">Tài liệu & Catalogue</h4>
-                    <a href="files/siemens-electrical-catalogue.pdf" target="_blank"
-                        class="btn btn-outline-primary btn-lg">
-                        <i class="fa fa-file-pdf me-2"></i> Tải Catalogue Siemens Electrical
+                    <a href="files/siemens-catalogue.pdf" target="_blank" class="btn btn-outline-primary btn-lg">
+                        <i class="fa fa-file-pdf me-2"></i> Tải Catalogue Siemens
                     </a>
                 </div>
             </div>
